[gd_scene load_steps=12 format=3 uid="uid://2icamt22lsy2"]

[ext_resource type="Script" path="res://scripts/turret/turret.gd" id="1_xdj7m"]
[ext_resource type="Texture2D" uid="uid://ch4xo76r5jmrx" path="res://assets/icon.svg" id="3_uy220"]
[ext_resource type="PackedScene" uid="uid://bjvr1segvh8bd" path="res://scenes/projectiles/bullet/bullet.tscn" id="4_mafdm"]
[ext_resource type="Script" path="res://utils/state-machine/state-machine.gd" id="5_balcf"]
[ext_resource type="Script" path="res://scripts/turret/idle.gd" id="6_5r8n1"]
[ext_resource type="Script" path="res://scripts/turret/aiming.gd" id="7_8kmil"]
[ext_resource type="PackedScene" uid="uid://p5of0eh7hp6m" path="res://scripts/components/bullet_storage/ammo_magazine_component/ammo_magazine.tscn" id="8_tbida"]
[ext_resource type="PackedScene" uid="uid://bdcu3imq3e6t1" path="res://scripts/components/health_component/health_component.tscn" id="9_h2e32"]
[ext_resource type="PackedScene" uid="uid://qcr7vj3dow5y" path="res://scripts/components/bullet_storage/laser_storage_component/laser_storage_component.tscn" id="9_t2xwk"]
[ext_resource type="PackedScene" uid="uid://nls03m7yaqpj" path="res://scripts/components/aiming/mouse_aiming_component/mouse_aiming_component.tscn" id="9_ttun8"]
[ext_resource type="PackedScene" uid="uid://bnkur2kld0tc4" path="res://scripts/components/self_destruction_component/self_destruction_component.tscn" id="10_4mbsj"]

[node name="Turret" type="Node2D" node_paths=PackedStringArray("aiming_component", "ammo_magazine_component", "health_component", "self_destruction_component") groups=["turrets"]]
light_mask = 4
visibility_layer = 15
script = ExtResource("1_xdj7m")
aiming_component = NodePath("MouseAimingComponent")
ammo_magazine_component = NodePath("LaserStorageComponent")
health_component = NodePath("HealthComponent")
self_destruction_component = NodePath("SelfDestructionComponent")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("3_uy220")

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("5_balcf")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("6_5r8n1")

[node name="Aiming" type="Node" parent="StateMachine"]
script = ExtResource("7_8kmil")

[node name="HealthComponent" parent="." instance=ExtResource("9_h2e32")]
position = Vector2(-1, 56)
scale = Vector2(1, 0.394105)

[node name="MouseAimingComponent" parent="." instance=ExtResource("9_ttun8")]

[node name="SelfDestructionComponent" parent="." instance=ExtResource("10_4mbsj")]

[node name="LaserStorageComponent" parent="." instance=ExtResource("9_t2xwk")]

[node name="AmmoMagazine" parent="." instance=ExtResource("8_tbida")]
stored_bullet = ExtResource("4_mafdm")

[connection signal="hp_ran_out" from="HealthComponent" to="." method="_on_health_component_hp_ran_out"]
